Add Shared library

--- a/src/RabbitPractice.Api/RabbitPractice.Api.csproj
+++ b/src/RabbitPractice.Api/RabbitPractice.Api.csproj
@@ -12,5 +12,9 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitPractice.Shared\RabbitPractice.Shared.csproj" />
+  </ItemGroup>
+
 
 </Project>
