--- a/src/RabbitPractice.Receive/RabbitPractice.Receive.csproj
+++ b/src/RabbitPractice.Receive/RabbitPractice.Receive.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitPractice.Shared\RabbitPractice.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
